# ROV_Challenge

./: .gitignore  CMakeLists.txt  PROBLEMS.md  README.md  package.xml
JoyStick (Missing Communications to PI)/: ROV_Joystick.pro  joystic_receive.cpp  joystic_receive.h  mainwindow.cpp  mainwindow.h
libs/: README.md  get_metal_type_client.h  rospublisher.cpp  rospublisher.h  rosservice.cpp  rosservice.h  rossubscriber.cpp  rossubscriber.h
python_scripts/: Line Follower.py  cat_detection.py  coin_detection.py  compare_shapes.py  motion.py  shapes.py
rov_chall_ui/: connectionwindow.cpp  connectionwindow.h  connectionwindow.ui  joystick.cpp  joystick.h  joystick_receive.cpp  joystick_receive.h  keybindings.cpp  keybindings.h  keybindings.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rov_chall_ui.pro  rovtimer.cpp  rovtimer.h
rov_challenge_ui/: HomeForm.ui.qml  Page1Form.ui.qml  Page2Form.ui.qml  main.cpp  main.qml  rov_challenge_ui.pro  rovtimer.cpp  rovtimer.h
srv/: GetMetalType.srv
